feat: Add new TaskLockType KILL for embedded kill tasks (#19921)
Changes
---------
- Add new `TaskLockType.KILL`
- This lock can coexist with any other lock type but not with another `KILL` lock
to ensure that only a single `kill` task is working on a single datasource-interval
- This lock type can currently be used only by embedded kill tasks so that the
`UnusedSegmentsKiller` does not skip intervals with active ingestion.
- Inject the `SegmentsMetadataManagerConfig` into `SqlSegmentsMetadataQuery`.
- Do not allow a segment to be marked as used if it was last updated earlier than the
buffer period. This ensures that an unused segment that is now eligible for kill is not
accidentally marked as used while a `kill` task for that segment is in progress.
- Add methods in `SegmentMetadataTransactionFactory` to provide read-write
transactions which do not use the segment metadata cache. This moves away the
transaction creation logic from `IndexerSQLMetadataStorageCoordinator` to the
transaction factory and reduces call sites that create a `SqlSegmentsMetadataQuery`.
- Add tests